prod/core/internet_gateway.tf
resource "aws_internet_gateway" "igw-eb97628e" {
    vpc_id = "vpc-24ff3c41"

    tags {
    }
}
