prod/core/nat_gateway.tf
resource "aws_nat_gateway" "nat-0da6e9e5ef5a66d90" {
    allocation_id = "eipalloc-a62edc98"
    subnet_id = "subnet-6628094e"
}

resource "aws_nat_gateway" "nat-059e697cf4639c18b" {
    allocation_id = "eipalloc-fcf709c2"
    subnet_id = "subnet-29de9c60"
}

resource "aws_nat_gateway" "nat-088746a08ae3fcccf" {
    allocation_id = "eipalloc-1b2edc25"
    subnet_id = "subnet-65c62212"
}

resource "aws_nat_gateway" "nat-07d5705d40b2ccaaa" {
    allocation_id = "eipalloc-5480626a"
    subnet_id = "subnet-444e4f02"
}

resource "aws_nat_gateway" "nat-08b1eceb91d4f19c4" {
    allocation_id = "eipalloc-d98a6be7"
    subnet_id = "subnet-df3a5ae5"
}
