prod/core/route_table_association.tf
resource "aws_route_table_association" "public-rtbassoc-7f010706" {
    route_table_id = "rtb-3b0cca5e"
    subnet_id = "subnet-df3a5ae5"
}

resource "aws_route_table_association" "public-rtbassoc-8d0006f4" {
    route_table_id = "rtb-3b0cca5e"
    subnet_id = "subnet-444e4f02"
}

resource "aws_route_table_association" "public-rtbassoc-7a010703" {
    route_table_id = "rtb-3b0cca5e"
    subnet_id = "subnet-6628094e"
}

resource "aws_route_table_association" "public-rtbassoc-830006fa" {
    route_table_id = "rtb-3b0cca5e"
    subnet_id = "subnet-65c62212"
}

resource "aws_route_table_association" "private-rtbassoc-432bcd3b" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-fefe68a5"
}

resource "aws_route_table_association" "private-rtbassoc-332bcd4b" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-57ff690c"
}

resource "aws_route_table_association" "private-rtbassoc-2a2bcd52" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-0506af39"
}

resource "aws_route_table_association" "private-rtbassoc-522bcd2a" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-72feb23b"
}

resource "aws_route_table_association" "private-rtbassoc-542bcd2c" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-16f5634d"
}

resource "aws_route_table_association" "private-rtbassoc-4f2bcd37" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-48f4b801"
}

resource "aws_route_table_association" "private-rtbassoc-3d2bcd45" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-c0f4b889"
}

resource "aws_route_table_association" "private-rtbassoc-482bcd30" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-f702abcb"
}

resource "aws_route_table_association" "private-rtbassoc-54e6fc2d" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-29de9c60"
}

resource "aws_route_table_association" "private-rtbassoc-472bcd3f" {
    route_table_id = "rtb-1e1c1478"
    subnet_id = "subnet-c207aefe"
}
